# bridge-hid

./: Cargo.toml  Cross.toml  README.md
src/: core.rs  input.rs  lib.rs  logging.rs  main.rs  output.rs  web.rs
src/output/: bluetooth.rs  bluetooth_ble.rs  usb.rs
src/web/: router.rs  ws.rs
static/: index.html  main.js  style.css
tests/: input_output_blue.rs  input_output_usb.rs
