[package]
name = "bridge-hid"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
usb-gadget = "0.7.6"
evdev = "0.12"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[profile.dev]
debug = 2
split-debuginfo = "off"

[profile.release]
debug = 2
split-debuginfo = "off"
