[package]
name = "bridge-hid"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
usb-gadget = "0.7.6"
evdev = {version = "0.13.2"}
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
libc = "0.2.180"
bluer = { version = "0.17", features = ["full"] }
uuid = "1.0"
futures = "0.3.31"
async-trait = "0.1.89"

[profile.dev]
debug = 2
split-debuginfo = "off"

[profile.release]
debug = 2
split-debuginfo = "off"
