[package]
name = "bridge-hid"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
usb-gadget = "0.7.6"
evdev = {version = "0.13.2", features = ["tokio"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
libc = "0.2.180"
bluer = { version = "0.17", features = ["full"] }
uuid = "1.0"
futures = "0.3.31"
async-trait = "0.1.89"
glob = "0.3.3"
tokio-util = "0.7.18"
clap = { version = "4.5.57", features = ["derive"] }
axum = { version = "0.8.8", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["fs"] }

[profile.dev]
debug = 2
split-debuginfo = "off"

[profile.release]
debug = 2
split-debuginfo = "off"
